--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -1,8 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
 }
 
@@ -29,19 +28,11 @@ html {
   width: 100%;
   height: 100vh;
   z-index: 2;
-  background: rgba(0, 0, 0, 0.7);
-  display: -webkit-box;
-  display: -ms-flexbox;
+  background: rgba($color: #000000, $alpha: 0.7);
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
 
 h1 {
@@ -54,7 +45,7 @@ a {
   font-size: 5rem;
   color: white;
   padding: 1.5rem;
-  background: #1575b6;
+  background: rgb(21, 117, 182);
   margin-bottom: 5rem;
   margin-right: 5rem;
   border-radius: 2rem;
@@ -67,26 +58,17 @@ a {
   position: absolute;
   width: 25%;
   height: 28vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   border-radius: 2rem;
   opacity: 0;
-  -webkit-transition: opacity 0.8s ease;
   transition: opacity 0.8s ease;
-  background: rgba(0, 0, 0, 0.8);
-}
-
-.img1 img,
-.img2 img {
-  width: 90%;
-  height: 80%;
+  background: rgba($color: #000000, $alpha: 0.8);
+  img {
+    width: 90%;
+    height: 80%;
+  }
 }
 
 .img1 {
@@ -102,17 +84,14 @@ a {
   width: 0.8%;
   left: 44%;
   height: 1.5vh;
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba($color: #000000, $alpha: 0.8);
   top: 68.3%;
   position: absolute;
-  -webkit-transform: rotateZ(45deg);
-          transform: rotateZ(45deg);
+  transform: rotateZ(45deg);
   opacity: 0;
-  -webkit-transition: opacity 0.8s ease;
   transition: opacity 0.8s ease;
 }
 
 .box2 {
   left: 56%;
 }
-/*# sourceMappingURL=style.css.map */
