--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -15,7 +15,7 @@ html {
   left: 0;
   width: 100%;
   height: 100vh;
-  background: url("/img/Ground.jpg");
+  background: url("img/Ground.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   opacity: 0.6;
